# hmpfr

./: ChangeLog  MPFRMichal.hs  README  TODO  dict.txt  hmpfr.cabal
Data/Number/: FFIhelper.hsc  MPFR.hs
Data/Number/MPFR/: Arithmetic.hs  Assignment.hs  Comparison.hs  Conversion.hs  Down.hs  FFIhelper.hsc  Integer.hs  Internal.hs  Misc.hs  Near.hs  Special.hs  Up.hs  Zero.hs
Data/Number1/: FFIhelper.hsc  MPFR.hs
Data/Number1/MPFR/: Arithmetic.hs  Assignment.hs  Base.hs  Comparison.hs  Conversion.hs  Down.hs  FFIhelper.hsc  Integer.hs  Internal.hs  Misc.hs  Near.hs  Special.hs  Up.hs  Zero.hs
cbits/: chsmpfr.c  chsmpfr.h  hsmpfr.c  hsmpfr.h
src/Data/Number/: MPFR.hs
src/Data/Number/MPFR/: Base.hs  Comparison.hs  Conversion.hs  Down.hs  FFIhelper.hsc  Misc.hs  Mutable.hs  Near.hs  Special.hs  Up.hs  Zero.hs
src/Data/Number/MPFR/Instances/: Down.hs  Near.hs  Up.hs  Zero.hs
src/Data/Number/MPFR/Mutable/: Comparison.hs
test/: Demo.hs
tests/: RunTests.hs  TestArithmetic.hs  TestBase.hs  TestCompare.hs
