name:                hmpfr
version:             0.0
synopsis:            Haskell binding to MPFR library
description:         Haskell binding to MPFR library
category:            Data, Math
license:             BSD3
license-file:        LICENSE
Stability:           experimental
author:              Aleš Bizjak
maintainer:          ales.bizjak@student.fmf.uni-lj.si
build-Depends:       base

Exposed-modules:     
Other-modules:       Data.Number1.MPFR.FFIhelper
		     Data.Number1.MPFR.Conversion
		     Data.Number1.MPFR.Assignment
		     Data.Number1.MPFR.Internal
		     Data.Number1.MPFR.Misc
		     Data.Number1.MPFR.Special
		     Data.Number1.MPFR.Comparison
		     Data.Number1.MPFR.Arithmetic

build-type:          Simple
build-tools:         hsc2hs
GHC-options:         -fvia-C -Wall
include-dirs:        cbits
includes:            mpfr.h chsmpfr.h
install-includes:    chsmpfr.h
c-sources:           cbits/chsmpfr.c

extra-libraries:     mpfr