name:                hmpfr
version:             0.0
synopsis:            Haskell binding to MPFR library
description:         Haskell binding to MPFR library
category:            Data, Math
license:             BSD3
license-file:        LICENSE
Stability:           experimental
author:              Aleš Bizjak
maintainer:          Aleš Bizjak <ales.bizjak@student.fmf.uni-lj.si>
build-Depends:       base

Exposed-modules:     Data.Number1.MPFR.Assignment
                     Data.Number1.MPFR.Conversion
                     Data.Number1.MPFR.Arithmetic
                     Data.Number1.MPFR.Comparison
                     Data.Number1.MPFR.Special
                     Data.Number1.MPFR.Integer
                     Data.Number1.MPFR.Misc
		     
		    
		     Data.Number1.MPFR.Near
		     Data.Number1.MPFR.Up
		     Data.Number1.MPFR.Down
		     Data.Number1.MPFR.Zero
		     Data.Number1.MPFR

Other-modules:       Data.Number1.MPFR.FFIhelper
                     Data.Number1.MPFR.Internal


build-type:          Simple
build-tools:         hsc2hs
GHC-options:         -fvia-C -Wall 
include-dirs:        cbits
includes:            mpfr.h chsmpfr.h
install-includes:    chsmpfr.h
c-sources:           cbits/chsmpfr.c

extra-libraries:     mpfr