name:                hmpfr
version:             0.1
synopsis:            Haskell binding to MPFR library
description:         Haskell binding to MPFR library
category:            Data, Math
license:             BSD3
license-file:        LICENSE
Stability:           experimental
author:              Aleš Bizjak
maintainer:          Aleš Bizjak <ales.bizjak0@gmail.com>
build-Depends:       base

Other-modules:       Data.Number.MPFR.FFIhelper
                     Data.Number.MPFR.Internal
		     Data.Number.MPFR.Base
		     

Exposed-modules:     Data.Number.MPFR.Assignment
		     Data.Number.MPFR.Conversion
                     Data.Number.MPFR.Arithmetic
                     Data.Number.MPFR.Comparison
                     Data.Number.MPFR.Special
                     Data.Number.MPFR.Integer
                     Data.Number.MPFR.Misc

		     Data.Number.MPFR.Near
		     Data.Number.MPFR.Up
		     Data.Number.MPFR.Down
		     Data.Number.MPFR.Zero

		     Data.Number.MPFR


build-type:          Simple
build-tools:         hsc2hs
GHC-options:         -Wall -fno-warn-orphans -O2 -fvia-C
GHC-prof-options:    -prof -auto-all
include-dirs:        cbits
includes:            chsmpfr.h mpfr.h
install-includes:    chsmpfr.h
c-sources:           cbits/chsmpfr.c

extra-libraries:     mpfr

